# doc-scan-sec-repo

./: Dockerfile  README.md  SECURITY_REPORT.md  pyproject.toml
.github/workflows/: publish-docker.yml  scan-demo.yml
doc-scan-sec/: autofix.py  github_utils.py  main.py
docscansec/: autofix.py  main.py  scanner.py
tests/: test_github.py  test_scanner.py
